--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.13",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
