--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.22.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.13",
+    "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.5.4"
   },
