--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
+    "react-vertical-timeline-component": "^3.6.0",
     "simplex-noise": "^4.0.3",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.4"
