--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-vertical-timeline-component": "^3.6.0",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.5.4"
