--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "@react-three/fiber": "^8.17.10",
     "@tabler/icons-react": "^3.22.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.3.1",
     "framer-motion": "^11.11.17",
     "gh-pages": "^6.2.0",
     "hackelite-web": "file:",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-vertical-timeline-component": "^3.6.0",
     "simplex-noise": "^4.0.3",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "three": "^0.170.0"
   },
