--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-vertical-timeline-component": "^3.6.0",
     "simplex-noise": "^4.0.3",
     "slick-carousel": "^1.8.1",
-    "tailwind-merge": "^2.5.4"
+    "tailwind-merge": "^2.5.4",
     "react-intersection-observer": "^9.13.1",
     "three": "^0.170.0"
   },
