--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@react-three/drei": "^9.117.0",
     "@react-three/fiber": "^8.17.10",
     "@tabler/icons-react": "^3.22.0",
+    "@tanstack/react-table": "^8.20.5",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.1",
     "framer-motion": "^11.11.17",
     "hackelite-web": "file:",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
+    "react-confetti-explosion": "^2.1.2",
     "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
