--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.3",
     "@react-three/drei": "^9.117.0",
     "@react-three/fiber": "^8.17.10",
     "@tabler/icons-react": "^3.22.0",
